# misc_quant

./: .gitignore  README  first_test.ipynb  pyproject.toml
notebooks/: first_test.ipynb
notebooks/options/: test_black_scholes.ipynb  understanding_black_scholes.ipynb  volatility_musings.ipynb
notebooks/stochastic_processes/: understanding_black_scholes.ipynb  understanding_ito.ipynb  visualizing_ito.ipynb  visualizing_wiener.ipynb
quant_learn/: __init__.py
quant_learn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
quant_learn/options/: __init__.py  black_scholes.py
quant_learn/stochastic_processes/: __init__.py  gaussian_random_walk.py  ito.py  wiener.py
quant_learn/utils/: __init__.py  funcs.py
quant_learn/utils/distributions/: __init__.py
quant_learn/utils/distributions/gaussian/: __init__.py
